scrollbar fix windows

--- a/source/stylesheets/site.css
+++ b/source/stylesheets/site.css
@@ -153,6 +153,12 @@ body {
 
 }
 
+.messageDebut::-webkit-scrollbar{
+	width: 10px;
+	display: none;
+
+}
+
 .chatlogs::-webkit-scrollbar-thumb{
 	border-radius: 5px;
 	background: rgba(0,0,0,.1);
